conexao bando de dados na Azure

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,6 +1,11 @@
-# Configurações para o ambiente local
-spring.datasource.url=jdbc:postgresql://localhost:5432/sicredi
-spring.datasource.username=postgres
-spring.datasource.password=admin
+# Configurações do PostgreSQL na Azure
+spring.datasource.url=jdbc:postgresql://demopostgres123.postgres.database.azure.com:5432/sicredi?sslmode=require
+spring.datasource.username=demopostgres123
+spring.datasource.password=99JEjFFi-a:3WSL
+
+# Outras configurações de pool de conexão, se necessário
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
 
 
