--- a/pom.xml
+++ b/pom.xml
@@ -98,18 +98,13 @@
 
     <build>
         <plugins>
-            <!--<plugin>
+            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
+                    <mainClass>com.example.desafio_sicredi.DesafioSicrediApplication</mainClass>
                 </configuration>
-            </plugin>-->
+            </plugin>
 
                 <!-- Plugin Maven para compilar com Java 21 -->
                 <plugin>
